--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -1,4 +1,10 @@
 .container {
   margin: 100px 150px;
   border-top: 2px solid #666;
+  padding: 20px 0;
+}
+
+.text {
+  color: #666666;
+  font-size: 16px;
 }
