--- a/components/BlogList/BlogListItem.module.scss
+++ b/components/BlogList/BlogListItem.module.scss
@@ -11,7 +11,7 @@
   .info {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 14px;
     margin: auto 0 4px;
   }
