--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -16,7 +16,7 @@
 .info {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 14px;
   margin: auto 0 4px;
 }
